ship weapon sample item working. some clean up to type

--- a/src/templates/items/fragments/vehicle-base.html
+++ b/src/templates/items/fragments/vehicle-base.html
@@ -1,5 +1,15 @@
 
 <div class="flex flexrow gap-2 text-center">
+  <div>
+    <img
+        class="profile-img w-24 h-24 object-contain"
+        src="{{img}}"
+        title="{{name}}"
+        data-edit="img"
+      />
+
+
+  </div>
 
   <div class="flex flex-col items-center">
     {{localize 'swnr.item.cost'}}:
