--- a/src/templates/items/fragments/vehicle-base.html
+++ b/src/templates/items/fragments/vehicle-base.html
@@ -1,6 +1,6 @@
 
 <div class="flex flexrow gap-2 text-center">
-  <div>
+  {{!-- <div>
     <img
         class="profile-img w-24 h-24 object-contain"
         src="{{img}}"
@@ -9,7 +9,7 @@
       />
 
 
-  </div>
+  </div> --}}
 
   <div class="flex flex-col items-center">
     {{localize 'swnr.item.cost'}}:
