ship weapon attack working

--- a/src/templates/dialogs/roll-ship-attack.html
+++ b/src/templates/dialogs/roll-ship-attack.html
@@ -2,8 +2,8 @@
   <div class="flex flexrow gap-2">
 
     <div class="flex flex-col">
-      <label for="burstFire">{{localize 'swnr.sheet.ship.shooter'}}: {{gunnerId}}</label>
-      <select name="shooter"
+      <label for="burstFire">{{localize 'swnr.sheet.ship.shooter'}}:</label>
+      <select name="shooterId"
         class="px-1.5 border border-gray-800 bg-gray-400 bg-opacity-75 placeholder-blue-800 placeholder-opacity-75 rounded-md">
         {{#select gunnerId}}
         {{#each crewArray }}
@@ -12,6 +12,23 @@
         {{/select}}
       </select>
     </div>
+
+
+
+    <div class="flex flex-col">
+      <label for="skill">{{localize 'swnr.sheet.skill'}}: </label>
+      <select name="skill"
+        class="px-1.5 border border-gray-800 bg-gray-400 bg-opacity-75 placeholder-blue-800 placeholder-opacity-75 rounded-md">
+        <option value="">{{ localize 'swnr.weapon.noSetSkill'}}</option>
+        {{#each gunner.itemTypes.skill }}
+        <option value="{{this.name}}" 
+           {{#if (eq this.name ../defaultSkill1)}} selected {{/if}}
+           {{#if (eq this.name ../defaultSkill2)}} selected {{/if}}
+        >{{this.name}}</option>
+        {{/each}}
+      </select>
+    </div>
+
 
     <div class="flex flex-col">
       {{! dice }}
@@ -25,31 +42,13 @@
     </div>
 
     <div class="flex flex-col">
-      <label for="skill">{{localize 'swnr.sheet.skill'}}: </label>
-      <select name="skill"
-        class="px-1.5 border border-gray-800 bg-gray-400 bg-opacity-75 placeholder-blue-800 placeholder-opacity-75 rounded-md">
-        <option value="">{{ localize 'swnr.weapon.noSetSkill'}}</option>
-        {{#each gunner.itemTypes.skill }}
-        <option value="{{this.id}}" 
-           {{#if (eq this.name ../defaultSkill1)}} selected {{/if}}
-           {{#if (eq this.name ../defaultSkill2)}} selected {{/if}}
-        >{{this.name}} {{this.data.data.rank}}</option>
-        {{/each}}
-      </select>
-    </div>
-
-
-    <div class="flex flex-col">
       {{! stat}}
       <label for="stat">{{localize 'swnr.sheet.stats'}}: </label>
       <select name="stat"
         class="w-32 border border-gray-800 bg-gray-400 bg-opacity-75 placeholder-blue-800 placeholder-opacity-75 rounded-md">
         {{#select defaultStat}}
         {{#each gunner.data.data.stats as |box name |}}
-        <option value="{{name}}">
-          {{localize (concat "swnr.stat.long." name)}}:
-          {{numberFormat box.mod decimals=0 sign=true}}
-        </option>
+        <option value="{{name}}">{{localize (concat "swnr.stat.long." name)}}</option>
         {{/each}}
         {{/select}}
       </select>
