commented out dice pool

--- a/src/templates/dialogs/roll-ship-attack.html
+++ b/src/templates/dialogs/roll-ship-attack.html
@@ -30,7 +30,7 @@
     </div>
 
 
-    <div class="flex flex-col">
+    {{!-- <div class="flex flex-col">
       {{! dice }}
       <label for="">{{localize 'swnr.chat.dicepool'}}: </label>
       <select name="dicepool"
@@ -39,7 +39,7 @@
         <option value="3d6kh2">3D6</option>
         <option value="4d6kh2">4D6</option>
       </select>
-    </div>
+    </div> --}}
 
     <div class="flex flex-col">
       {{! stat}}
