travel days working

--- a/src/templates/actors/ship-sheet.html
+++ b/src/templates/actors/ship-sheet.html
@@ -278,7 +278,26 @@
         </div>
 
 
+        <!--buttons-->
+        <div class="cost flex flex-col items-center ">
+          <a><i class="fas fa-route  fa-2x travel-button"></i></a>
+          {{localize 'swnr.sheet.ship.travel'}}
+        </div>
 
+        <div class="cost flex flex-col items-center ">
+          <a><i class="fas fa-rocket  fa-2x spike-button"></i></a>
+          {{localize 'swnr.sheet.ship.spike'}}
+        </div>
+
+        <div class="cost flex flex-col items-center ">
+          <a><i class="fas fa-gas-pump  fa-2x refuel-button"></i></a>
+          {{localize 'swnr.sheet.ship.refuel'}}
+        </div>
+
+        <div class="cost flex flex-col items-center ">
+          <a><i class="fas fa-dumpster-fire  fa-2x crisis-button"></i></a>
+          {{localize 'swnr.sheet.ship.crisis'}}
+        </div>
 
         <!-- end Grid div for header -->
       </div>
